--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
         <ion-icon name="people-sharp"></ion-icon>
     </div>
     <div class="content">
-        <div class="box status">
+        <!-- <div class="box status">
             <p class="text-message"><span class="color-gray">(09:21:45)</span> <span>João</span> entra na sala...</p>
         </div>
         <div class="box normal-message">
-            <p class="text-message"><span class="color-gray">(09:22:28)</span> <span>João</span> para <span>Todos:</span> Bom dia</p>
+            <p class="text-message"><span class="color-gray">(09:22:28)</span> <span>João</span> para <span>Todos</span>: Bom dia</p>
         </div>
         <div class="box normal-message">
-            <p class="text-message"><span class="color-gray">(09:22:38)</span> <span>Maria</span> para <span>João:</span> Oi João :)</p>
+            <p class="text-message"><span class="color-gray">(09:22:38)</span> <span>Maria</span> para <span>João</span>: Oi João :)</p>
         </div>
         <div class="box reserved-message">
-            <p class="text-message"><span class="color-gray">(09:22:48)</span> <span>João</span> reservadamente para <span>Maria:</span> Oi gatinha quer tc?</p>
+            <p class="text-message"><span class="color-gray">(09:22:48)</span> <span>João</span> reservadamente para <span>Maria</span>: Oi gatinha quer tc?</p>
         </div>
         <div class="box status">
             <p class="text-message"><span class="color-gray">(09:22:58)</span> <span>Maria</span> sai da sala...</p>
-        </div>
+        </div> -->
     </div>
     <div class="bottom">
         <input type="text" placeholder="Escreva aqui...">
-        <ion-icon name="paper-plane-outline"></ion-icon>
+        <ion-icon name="paper-plane-outline" onclick="enviarMensagem()"></ion-icon>
     </div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
