--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Bate-Papo UOL</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet"> 
+    <link rel="shortcut icon" href="#"/>
+    <link rel="stylesheet" href="./css/reset.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet"/> 
 </head>
 <body>
     <div class="top">
-        <img src="./images/logo.svg"/>
+        <img src="./images/logo.svg" alt="Logo do Bate Papo da UOL"/>
         <ion-icon name="people-sharp"></ion-icon>
     </div>
     <div class="content">
-        <!-- <div class="box status">
+        <div class="box status">
             <p class="text-message"><span class="color-gray">(09:21:45)</span> <span>João</span> entra na sala...</p>
         </div>
         <div class="box normal-message">
@@ -31,15 +32,56 @@
         </div>
         <div class="box status">
             <p class="text-message"><span class="color-gray">(09:22:58)</span> <span>Maria</span> sai da sala...</p>
-        </div> -->
+        </div>
     </div>
     <div class="bottom">
-        <input type="text" placeholder="Escreva aqui...">
+        <div>
+            <input type="text" placeholder="Escreva aqui..."/>
+            <h6>Enviando para Maria (reservadamente)</h6>
+        </div>
         <ion-icon name="paper-plane-outline" onclick="enviarMensagem()"></ion-icon>
     </div>
-
+    <div class="opcoes ocultar">
+        <div class="tela-preta"></div>
+        <div class="menu-lateral">
+            <h6>Escolha um contato
+                para enviar mensagem:</h6>
+            <div class="contatos">
+                <div class="contato selecionar">
+                    <ion-icon name="people-sharp" class="ion-icon-todos"></ion-icon>
+                    <p class="texto-menu-lateral">Todos</p>
+                    <img src="./images/check.svg" alt="Selecionado"/>
+                </div>
+                <div class="contato">
+                    <ion-icon name="person-circle-sharp" class="ion-icon-usuario"></ion-icon>
+                    <p class="texto-menu-lateral">João</p>
+                    <img src="./images/check.svg" alt="Selecionado"/>
+                </div>
+                <div class="contato">
+                    <ion-icon name="person-circle-sharp" class="ion-icon-usuario"></ion-icon>
+                    <p class="texto-menu-lateral">Maria</p>
+                </div>
+            </div>
+            <h6 class="texto-visibilidade">Escolha a visibilidade:</h6>
+            <div class="contato">
+                <ion-icon name="lock-open" class="ion-icon-visibilidade"></ion-icon>
+                <p class="texto-menu-lateral">Público</p>
+                <img src="./images/check.svg" alt="Selecionado"/>
+            </div>
+            <div class="contato">
+                <ion-icon name="lock-closed" class="ion-icon-visibilidade"></ion-icon>
+                <p class="texto-menu-lateral">Reservadamente</p>
+                <img src="./images/check.svg" alt="Selecionado"/>
+            </div>
+        </div>
+    </div>
+    <div class="tela-de-entrada ocultar">
+        <img src="./images/logo2.svg" alt="Logo do Bate Papo da UOL"/>
+        <input type="text" placeholder="Digite seu nome"/>
+        <button>Entrar</button>
+    </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./scripts/script.js"></script>
+    <!-- <script src="./scripts/script.js"></script> -->
 </body>
 </html>
