Versão 5 - Bônus implementado

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             </div>
         </div>
     </div>
-    <div class="tela-de-entrada ocultar">
-        <img src="./images/logo2.svg" alt="Logo do Bate Papo da UOL"/>
+    <div class="tela-de-entrada">
+        <img src="./images/logo2.svg" alt="Logo do Bate Papo da UOL" class="logo-tela-de-entrada"/>
         <input type="text" placeholder="Digite seu nome"/>
-        <button>Entrar</button>
-        <img src="./images/loading-icon.gif" alt="Carregando" class="ocultar"/>
+        <button onclick="carregarEntradaNaSala()">Entrar</button>
+        <img src="./images/loading-icon.gif" alt="Carregando" class="img-carregando ocultar"/>
         <p class="ocultar">Entrando...</p>
     </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
