Versão 6 - Versão final

--- a/index.html
+++ b/index.html
@@ -18,21 +18,6 @@
         <ion-icon name="people-sharp" onclick="abrirMenuLateral()"></ion-icon>
     </div>
     <div class="content">
-        <!-- <div class="box status">
-            <p class="text-message"><span class="color-gray">(09:21:45)</span> <span>João</span> entra na sala...</p>
-        </div>
-        <div class="box normal-message">
-            <p class="text-message"><span class="color-gray">(09:22:28)</span> <span>João</span> para <span>Todos</span>: Bom dia</p>
-        </div>
-        <div class="box normal-message">
-            <p class="text-message"><span class="color-gray">(09:22:38)</span> <span>Maria</span> para <span>João</span>: Oi João :)</p>
-        </div>
-        <div class="box reserved-message">
-            <p class="text-message"><span class="color-gray">(09:22:48)</span> <span>João</span> reservadamente para <span>Maria</span>: Oi gatinha quer tc?</p>
-        </div>
-        <div class="box status">
-            <p class="text-message"><span class="color-gray">(09:22:58)</span> <span>Maria</span> sai da sala...</p>
-        </div> -->
     </div>
     <div class="bottom">
         <div>
@@ -53,16 +38,6 @@
                     <img src="./images/check.svg" alt="Selecionado"/>
                 </div>
                 <div class="contatos-dinamico">
-                <!-- <div class="contato" onclick="selecionarContato(this)">
-                        <ion-icon name="person-circle-sharp" class="ion-icon-usuario"></ion-icon>
-                        <p class="texto-menu-lateral">João</p>
-                        <img src="./images/check.svg" alt="Selecionado"/>
-                    </div>
-                    <div class="contato" onclick="selecionarContato(this)">
-                        <ion-icon name="person-circle-sharp" class="ion-icon-usuario"></ion-icon>
-                        <p class="texto-menu-lateral">Maria</p>
-                        <img src="./images/check.svg" alt="Selecionado"/>
-                    </div> -->
                 </div>
             </div>
             <h6 class="texto-visibilidade">Escolha a visibilidade:</h6>
@@ -72,7 +47,7 @@
                     <p class="texto-menu-lateral">Público</p>
                     <img src="./images/check.svg" alt="Selecionado"/>
                 </div>
-                <div class="visibilidade" onclick="selecionarVisibilidade(this)">
+                <div class="visibilidade margin-bottom" onclick="selecionarVisibilidade(this)">
                     <ion-icon name="lock-closed" class="ion-icon-visibilidade"></ion-icon>
                     <p class="texto-menu-lateral">Reservadamente</p>
                     <img src="./images/check.svg" alt="Selecionado"/>
